Fix merge
Signed-off-by: lisrte <laurent.issertial@rte-france.com>